CR-2007-08-22-2: Bugfix:    o hedeby shutdown hook should not report
                              errors which might effect init_core_system
                              test
                            o standard hedeby shutdown now waits for
                              components
                            o only still running components are killed
                              after standard hedeby shutdown
                            o install hedeby test fails on not time 
                              syncronized hosts
                 Issue:     93 (hedeby issue)
                 Review:    RH

CR-2007-08-22-1: Enhancem.: o added new cluster procedure:
                              get_all_hosts()
                            o check_all_system_times() now tests
                              system times on all cluster hosts
                            o split testsuite test to 4 subtests
                 Review:    AA

CR-2007-08-22-0: Enhancem.: o added new remote procedure:
                              get_remote_time()
                            o using new procedure in:
                              check_all_system_times() 
                 Review:    AA

RH-2007-08-21-0: Enhancem.: o test for hedeby issue 88 added
                 Issue:     88 (hedeby issue)
                 Review:    CR

RH-2007-08-20-0: Enhancem.: o methods for reading hedeby pid files added
                            o new method write_remote_file added
                 Review:    CR

CR-2007-08-17-1: Bugfix:    o compile_source() ignores compile errors
                 Issue:     143
                 Review:    RH

CR-2007-08-17-0: Enhancem.: o hedeby: added error message for distinst
                 Bugfix:    o hedeby: testsuite tries to chown not existent
                              spool directory
                 Issue:     90 (hedeby issue)
                 Issue:     86 (hedeby issue)
                 Review:    RH
